# levain

./: .gitignore  LICENSE  MANIFEST.in  NOTICE  README.md  pyproject.toml
bench/: entity_bakeoff.py
docs/: operator-manual.md  upstream-defects.md
examples/accrual/: README.md  growth_timeline.md  render_timeline.py
levain/: __init__.py  __main__.py  _tui_curses.py  app_server.py  cli.py  daemon.py  dashboard.py  docs.py  docs_server.py  doctor.py  idempotency.py  init_server.py  install.py  interview.py  jobs.py  kernel.py  manifest.py  packs.py  reconcile.py  run.py  spores.py  tui.py  turn_input.py  update.py  verify.py  web_server.py  wrap.py  writes.py
levain/firing/: __init__.py  agent_reply.py  anneal.py  confinement.py  contract.py  encoding.py  isolation.py  openhands.py  presence.py  seed.py
levain/firing/openhands/: __init__.py  agent.py  capture.py  condenser.py  entity.py  levain_condenser.py  tools.py
levain/templates/: pack.toml
levain/templates/activation/: posture.md  recency_directives.md
levain/templates/activation/hooks/: _levain_hook.py  session_start.py  user_prompt_submit.py
levain/templates/adapters/claude-code/: CLAUDE.md.template  README.md  mcp.template.json  settings.template.json
levain/templates/adapters/codex/: AGENTS.md.template  README.md  hooks.json.template  mcp.template.toml
levain/templates/adapters/codex/activation/: posture.md  recency_directives.md
levain/templates/adapters/codex/activation/hooks/: _levain_hook.py  session_start.py  user_prompt_submit.py
levain/templates/app/: dashboard.html
levain/templates/docs/: operator-manual.md
levain/templates/seed/: README.md  continuity.md  memory.md  origin.md  partnership.md  spore_instructions.md  world.md
levain/templates/web/: dashboard.css  dashboard.html  dashboard_boot.js  dashboard_core.js  docs.css  docs.html  docs.js  init.css  init.html  init.js  markdown.js
tests/: test_accrual.py  test_actions.py  test_app_server.py  test_cli.py  test_compat_integration.py  test_daemon.py  test_dashboard.py  test_docs.py  test_docs_server.py  test_doctor_content.py  test_firing_anneal.py  test_firing_capture.py  test_firing_condenser.py  test_firing_confinement.py  test_firing_contract.py  test_firing_encoding.py  test_firing_entity.py  test_firing_isolation.py  test_firing_seed.py  test_firing_tools.py  test_hooks.py  test_idempotency.py  test_init_server.py  test_install.py  test_interview.py  test_jobs.py  test_kernel.py  test_levain_condenser.py  test_levain_presence.py  test_manifest.py  test_markdown_parity.py  test_openhands_adapter.py  test_packs.py  test_reconcile.py  test_run.py  test_spores.py  test_tui.py  test_turn_input.py  test_update.py  test_web_server.py  (+2 more)
