[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "levain"
version = "0.3.2"
description = "A portable cognitive-partnership memory + methodology kit. Ship the seed that grows a practice, not the practice."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Phill Clapham" }]
keywords = [
    "agent",
    "ai",
    "anneal-memory",
    "claude-code",
    "codex",
    "cognitive-partnership",
    "memory",
    "methodology",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    # Partnership seed needs the 0.8.x stack: spores (0.4.0), schema-aware
    # budget (0.4.2), `init --schema partnership` (0.4.4 — AM-INITSCHEMA), the
    # crystallized-pattern tier (0.6.0 store + 0.7.0 opt-in / `crystal index`+
    # `recall` / `retrieve_patterns`), AND the AM-CRYSTAL-RECALL associative
    # (Hebbian) backend (0.8.0) that makes crystallized recall fire by meaning.
    # The prior `<0.8` ceiling capped adopters out of the entire 0.8.x crystal-
    # recall tier (spore-060); `<0.5` before that predated crystals entirely.
    "anneal-memory>=0.8.0,<0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
levain = "levain.cli:main"

[project.urls]
Homepage = "https://levainhq.com"
Repository = "https://github.com/levainhq/levain"

[tool.setuptools.packages.find]
where = ["."]
include = ["levain*"]

[tool.setuptools.package-data]
levain = ["templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
