[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "levain"
version = "0.3.2"
description = "A portable cognitive-partnership memory + methodology kit. Ship the seed that grows a practice, not the practice."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Phill Clapham" }]
keywords = [
    "agent",
    "ai",
    "anneal-memory",
    "claude-code",
    "codex",
    "cognitive-partnership",
    "memory",
    "methodology",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    # Partnership seed needs the 0.8.x stack: spores (0.4.0), schema-aware
    # budget (0.4.2), `init --schema partnership` (0.4.4 — AM-INITSCHEMA), the
    # crystallized-pattern tier (0.6.0 store + 0.7.0 opt-in / `crystal index`+
    # `recall` / `retrieve_patterns`), the AM-CRYSTAL-RECALL associative
    # (Hebbian) backend (0.8.0) that makes crystallized recall fire by meaning,
    # AND the AM-CONTLOCK shared `continuity_lock` (0.9.0) the governed State /
    # undo writes take to serialize against the anneal consolidate cross-process.
    # The prior `<0.8` ceiling capped adopters out of the 0.8.x crystal-recall
    # tier (spore-060); `<0.5` before that predated crystals entirely. (0.9.0
    # ships with anneal Slice C — main carries this pin ahead of the PyPI publish,
    # per the coordinated shadow-ship plan.)
    "anneal-memory>=0.9.0,<0.10",
]

[project.optional-dependencies]
# The MCP-App in-host dashboard server (`levain serve-app`). Optional so the
# core install + `levain dashboard` CLI stay lean; only pulled when an operator
# wants the in-host render. The UI loads its client lib from a CDN — no Node.
app = ["mcp>=1.27,<2"]
dev = ["pytest>=7.4", "mcp>=1.27,<2"]

[project.scripts]
levain = "levain.cli:main"

[project.urls]
Homepage = "https://levainhq.com"
Repository = "https://github.com/levainhq/levain"

[tool.setuptools.packages.find]
where = ["."]
include = ["levain*"]

[tool.setuptools.package-data]
levain = ["templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
