[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "levain"
version = "0.3.13"
description = "A portable cognitive-partnership memory + methodology kit. Ship the seed that grows a practice, not the practice."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Phill Clapham" }]
keywords = [
    "agent",
    "ai",
    "anneal-memory",
    "claude-code",
    "codex",
    "cognitive-partnership",
    "memory",
    "methodology",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    # Partnership seed needs the 0.8.x stack: spores (0.4.0), schema-aware
    # budget (0.4.2), `init --schema partnership` (0.4.4 — AM-INITSCHEMA), the
    # crystallized-pattern tier (0.6.0 store + 0.7.0 opt-in / `crystal index`+
    # `recall` / `retrieve_patterns`), the AM-CRYSTAL-RECALL associative
    # (Hebbian) backend (0.8.0) that makes crystallized recall fire by meaning,
    # AND the AM-CONTLOCK shared `continuity_lock` (0.9.0) the governed State /
    # undo writes take to serialize against the anneal consolidate cross-process.
    # The prior `<0.8` ceiling capped adopters out of the 0.8.x crystal-recall
    # tier (spore-060); `<0.5` before that predated crystals entirely. (0.9.0
    # ships with anneal Slice C — main carries this pin ahead of the PyPI publish,
    # per the coordinated shadow-ship plan.) `>=0.9.1` is REQUIRED: Slice-3b's Tray
    # write seam calls the SporeStore disposition passthrough + the expect_disposition
    # CAS, both added in 0.9.1 — an older 0.9.0 would TypeError at runtime, not refuse
    # cleanly [codex L3 HIGH], so the API contract is version-gated, not feature-detected.
    # `>=0.9.4` (AM-SPORE-CAS): the KEEP-NOTE LIFECYCLE's `_apply_spore_verb` ascend guard now
    # passes `expect_disposition` to `SporeStore.ascend` (the ascend CAS added in 0.9.4) — same
    # version-gated contract: an older anneal lacks the param and would TypeError, not refuse.
    # `>=0.9.5` (AM-SPORE-CAS-DESCEND, spore-173): `_apply_spore_verb`'s descend branch now passes
    # `expect_disposition` to `SporeStore.descend` (the descend CAS added in 0.9.5). Same contract —
    # 0.9.4's `descend` has no such param, so the first compost/dismiss/remove would TypeError, not
    # refuse cleanly. (The tier CAS rides `update`'s expect_disposition, present since 0.9.1.)
    # `>=0.9.6` (spore-225 — the Chris release bundle): a RELEASE-GATE lockstep bump, NOT a new-API
    # contract gate. 0.9.6 is the first PUBLIC 0.9.x on PyPI (AM-CONSOLIDATE-EFFERENT + the now-keyed
    # AM-WRAP-GENERATED + the full 0.9.x stack); the compat-manifest's `pip_floor_verdict` release-gate
    # requires this floor == `manifest.KNOWN_GOOD_ANNEAL` (also bumped to 0.9.6), so they move together
    # or `levain doctor`'s `compat: pip-pin` check flags the skew. levain calls no 0.9.6-only API that
    # 0.9.5 lacks — the floor is the published-known-good, not a runtime requirement.
    "anneal-memory>=0.9.6,<0.10",
]

[project.optional-dependencies]
# The MCP-App in-host dashboard server (`levain serve-app`). Optional so the
# core install + `levain dashboard` CLI stay lean; only pulled when an operator
# wants the in-host render. The UI loads its client lib from a CDN — no Node.
app = ["mcp>=1.27,<2"]
# The OpenHands firing + presence adapter (`levain.firing.openhands`) — the runnable-entity
# executor. Self-contained after the vagus→Levain fold-in: the firing contract + AnnealFiring +
# the OpenHands condensers now live in `levain.firing`, so this extra needs ONLY openhands-sdk (+
# the base `anneal-memory` dep for the real recall/capture). NO vagus dependency. The
# harness-neutral seam `levain.firing` imports NO OpenHands, so a plain `pip install levain` never
# pulls any of this (the leaf stays isolated; the adapter loads only on `import levain.firing.openhands`).
openhands = ["openhands-sdk==1.26.0", "openhands-tools==1.26.0"]
dev = ["pytest>=7.4", "mcp>=1.27,<2"]

[project.scripts]
levain = "levain.cli:main"

[project.urls]
Homepage = "https://levainhq.com"
Repository = "https://github.com/levainhq/levain"

[tool.setuptools.packages.find]
where = ["."]
include = ["levain*"]

[tool.setuptools.package-data]
levain = ["templates/**/*"]

# Never ship compiled bytecode in the wheel: the `templates/**/*` glob above would
# otherwise pull in any `__pycache__/*.pyc` left in the working tree (cross-version
# bytecode, e.g. cpython-314, to every adopter regardless of their interpreter).
# `levain init` already strips these on copy, but the artifact itself must be clean.
# Scoped GLOBALLY (not just under templates/) so a `__pycache__` at the package root
# or in any subpackage can't leak into the wheel either — the sdist's MANIFEST.in
# `global-exclude` covers the same, keeping wheel and sdist symmetric (L3 MED-3).
[tool.setuptools.exclude-package-data]
levain = ["**/__pycache__/*", "**/*.pyc", "**/*.pyo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
